package com.example.AISafePSOFT_26.Airport;

public enum AirportStatus {
    OPERATIONAL,CLOSED,UNDER_MAINTENANCE
}
