package com.example.AISafePSOFT_26.Airport;

public enum RunwayStatus {
    OPEN,IN_USE,UNDER_MAINTENANCE
}
