package com.example.AISafePSOFT_26.Airport.domain;

import jakarta.persistence.Column;
import jakarta.persistence.Embeddable;
import jakarta.persistence.EnumType;
import jakarta.persistence.Enumerated;

@Embeddable
public class Contact {

    @Enumerated(EnumType.STRING)
    @Column(name = "contact_type", nullable = false)
    private ContactType type;

    @Column(name = "contact_value", nullable = false)
    private String value;

    protected Contact() {}

    public Contact(ContactType type, String value) {
        this.type = type;
        this.value = value;
    }
}