package com.example.AISafePSOFT_26.Flight.domain;

public enum FlightStatus {
    DELAYED,SCHEDULED,DEPARTED,CANCELED,ARRIVED,IN_PROGRESS
}
