package com.example.AISafePSOFT_26.Maintenance.domain;

import jakarta.persistence.*;

import java.util.Map;

@Embeddable
public class DoneList {
    private String completionNotes;

    @ElementCollection
    @CollectionTable(name = "done_list_tasks")
    @MapKeyColumn(name = "task")
    @Column(name = "completed")
    private Map<String, Boolean> tasksDone;
    public DoneList(String completionNotes, Map<String,Boolean> tasksDone) {
        this.completionNotes = completionNotes;
        this.tasksDone = tasksDone;
    }

    public DoneList() {
    }

    public String getCompletionNotes() {
        return completionNotes;
    }

}
