package com.example.AISafePSOFT_26.Route;

public enum RouteType {
    DIRECT,
    SCALED
}
